instructions.Instructions.scala.error
Erreur de compilation :
Instructions:1: error: not found: value baisserBrosse
baisserBrosse()
^Instructions:4: error: not found: value doite
doite()
^